fix: Hide overflow on react slick slider

--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -50,8 +50,8 @@ $text-xxxl: calc(
   margin-right: -2rem;
   margin-left: -2rem;
   box-sizing: border-box;
+  overflow: hidden;
 }
-
 .slick-list {
   padding-left: 1rem;
 }
